# BenchmarkV3

./: .gitignore  CLAUDE.md  Plans.md  README.md  alembic.ini  harness.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: be-dev.md  be-reviewer.md  be-test.md  fe-dev.md  fe-planner.md  fe-reviewer.md
alembic/: env.py
alembic/versions/: 0002_league_is_active.py  0003_transfer_injury_news.py  0004_h2h_fixture.py  20260513_2100_0001_initial_schema.py
app/: __init__.py  main.py
app/core/: config.py
app/models/: __init__.py  app_user.py  base.py  fixture.py  h2h_fixture.py  injury.py  league.py  news_article.py  player.py  standings.py  team.py  transfer.py  venue.py
app/workers/: __init__.py
docs/: env-template.md
docs/decisions/: python-package-manager.md
docs/features/: README.md  fixture-detail.devplan.md  fixture-detail.spec.md  fixture-detail.testplan.md  main-home.devplan.md  main-home.spec.md  main-home.testplan.md
docs/spec/: agent-workflow.md  db-schema.md  fe-workflow.md
docs/workers/: README.md  daily-sync.md  translation-filler.md
frontend/: .gitignore  broadcast.html  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: fixture-detail.spec.ts  main-home.spec.ts
frontend/src/: App.vue  BroadcastApp.vue  broadcast.ts  main.ts
scripts/: translate_poc.py
tests/: conftest.py
tests/integration/: test_daily_sync.py  test_db_schema_migration.py  test_l2_migration.py  (+3 more)
(+137 files in other folders)
